--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/node": "^7.13.13",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@types/styled-components": "^5.1.9",
     "jest-styled-components": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -12,7 +15,7 @@
     "react-scripts": "4.0.3",
     "react-spring": "^9.0.0-rc.3",
     "react-test-renderer": "^17.0.2",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -40,13 +43,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react-hooks": "^5.1.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.22.0",
     "prettier": "^2.2.1",
-    "react-styleguidist": "^11.1.6"
+    "react-docgen-typescript": "^1.22.0",
+    "react-styleguidist": "^11.1.6",
+    "typescript-plugin-styled-components": "^1.5.0"
   }
 }
